data/all_generated_tests/raw_wast_tests/call_IncorrectBranchTargetResolution_3142.wast
;; **Sure, here are the natural language descriptions for 10 unique differential tests:**  1. **Test 1**: Define a function that includes a `br` instruction targeting a non-existent block or loop label. Ensure the function is called with valid parameters. Check if the WebAssembly implementation properly triggers an index out-of-bounds error, whereas the Wizard_engine might incorrectly resolve the target without throwing an error.

(assert_invalid
  (module
    (func $test-func (block (br 2)))
    (func (call $test-func))
  )
  "unknown label"
)